--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -12,10 +12,10 @@
 @import 'layout/site-footer';
 @import 'layout/page-section';
 @import 'layout/section-title';
-@import 'layout/grid';
 @import 'layout/nav';
 
 @import 'components/button';
+@import 'components/scroll-to-top';
 
 @import 'sections/services';
 @import 'sections/stats';
