--- a/app/assets/styles/sections/_contact.scss
+++ b/app/assets/styles/sections/_contact.scss
@@ -17,60 +17,76 @@
         width: 630px;
       }
 
-    .input {
-      border: 2px solid $black;
-      font-family: $main-font-stack;
-      margin-bottom: 1.15rem;
-      padding: 1rem 1.5rem .5rem;
+      &__section {
+        position: relative;
+        display: inline-block;
 
-      &-warning {
-        border: 2px solid red;
+        &:first-of-type {
+          margin-right: 25px;
+        }
+      }
+
+      .input {
+        border: 2px solid $black;
+        font-family: $main-font-stack;
+        margin-top: 1.15rem;
+        padding: 1rem 1.5rem .5rem;
+      }
+
+      .input--short {
+        box-sizing: border-box;
+        width: 300px;
+      }
+
+      .input--long {
+        box-sizing: border-box;
+        width: 300px;
+
+        @include atMedium {
+          width: 630px;
+        }
+      }
+      
+      input {
+        height: 50px;
+      }
+
+      textarea {
+        height: 180px;
+      }
+
+      .label {
+        font-weight: bold;
+        letter-spacing: .05em;
+        position: absolute;
+        padding: 2.1rem 1rem;
+
+        &-focus {
+          font-size: 14px;
+          padding: 1.3rem 1rem;
+        }
+      }
+
+      .button--submit {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        padding: 1rem 8rem;
       }
     }
+  }
 
-    .input--short {
-      box-sizing: border-box;
-      width: 300px;
+  label.invalid {
+    color: #f00;
+    position: absolute;
+    left: 0;
+    bottom: -17px;
+  }
 
-      &:first-of-type {
-        margin-right: 25px;
-      }
-    }
+  input.invalid, textarea.invalid {
+    outline: 1px solid #f00;
+  }
 
-    .input--long {
-      box-sizing: border-box;
-      width: 300px;
-
-      @include atMedium {
-        width: 630px;
-      }
-    }
-    
-    input {
-      height: 50px;
-    }
-
-    textarea {
-      height: 180px;
-    }
-
-    .label {
-      font-weight: bold;
-      letter-spacing: .05em;
-      position: absolute;
-      padding: 1rem;
-
-      &-focus {
-        font-size: 14px;
-        padding: .2rem 1rem;
-      }
-    }
-
-    .button--submit {
-      margin-top: 1rem;
-      padding: 1rem 8rem;
-    }
-
-    }
+  div.error {
+    color: #f00;
   }
 }
