--- a/app/assets/styles/sections/_portfolio-works.scss
+++ b/app/assets/styles/sections/_portfolio-works.scss
@@ -1,5 +1,85 @@
 .portfolio-works {
   background-color: $black;
+  position: relative;
+
+  &-grid {
+    display: flex;
+    flex-wrap: wrap;
+
+    .side {
+      box-sizing: border-box;
+      width: 100%;
+
+      @include atMedium {
+        width: 25%;
+      }
+    }
+
+    .main {
+      box-sizing: border-box;
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+
+      @include atMedium {
+        width: 75%;
+      }
+    }
+
+    .portfolio-img {
+      flex: 0 0 100%;
+      display: none;
+      height: 600px;
+      max-width: 100%;
+
+      @include atMedium {
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
+        height: 300px;
+      }
+
+      &--is-visible {
+        display: block;
+      }
+    }
+
+    .portfolio-img--wide {
+      flex: 0 0 100%;
+      height: 600px;
+      max-width: 100%;
+
+      @include atMedium {
+        flex: 0 0 50%;
+        max-width: 50%;
+        height: 450px;
+      }
+    }
+
+    &__header {
+      background-color: $yellow;
+      box-sizing: border-box;
+      width: 100%;
+      height: 450px;
+      padding: 4rem 2rem;
+
+        @include atMedium {
+          left: 25%;
+          top: auto;
+          height: 450px;
+          width: 50%;
+        }
+
+        @include atLarge {
+          padding: 7rem 4.5rem;      
+        }
+
+        .title {
+          font-size: 30px;
+          margin: 0;
+          margin-bottom: 3rem;
+        }
+    }
+  }
 
   .work-header {
     background-color: $yellow;
