--- a/app/assets/styles/sections/_stats.scss
+++ b/app/assets/styles/sections/_stats.scss
@@ -19,14 +19,27 @@
     &:first-of-type {
       margin-bottom: 3rem;
       margin-right: 3rem;
+
+      @include atMedium {
+        margin-bottom: 0;
+        margin-right: 0;
+      }
     }
 
     &:nth-of-type(2) {
-      margin-bottom: 3rem;
+      margin-bottom: 3rem;      
+      
+      @include atMedium {
+        margin-bottom: 0;
+      }
     }
 
     &:nth-of-type(3) {
-      margin-right: 3rem;
+      margin-right: 3rem;      
+      
+      @include atMedium {
+        margin-right: 0;
+      }
     }
 
     &__number {
