--- a/app/assets/styles/components/_scroll-to-top.scss
+++ b/app/assets/styles/components/_scroll-to-top.scss
@@ -2,14 +2,16 @@
   background-color: $yellow;
   color: $black;
   display: none;
-  font-size: 1.5em;
-  line-height: 50px;
   height: 50px;
   width: 50px;
   position: fixed;
-  bottom: 20px;
+  bottom: 28px;
   right: 20px;
   text-align: center;
+
+  @include atMedium {
+    right: 19.5%;
+  }
 
   &--is-visible {
     display: block;
@@ -17,5 +19,12 @@
 
   &:hover {
     cursor: pointer;
+  }
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
