--- a/app/assets/styles/layout/_generic-content.scss
+++ b/app/assets/styles/layout/_generic-content.scss
@@ -1,10 +1,10 @@
 .generic-content {
     font-size: 20px;
-    letter-spacing: 0.1em;
+    letter-spacing: 1.4px;
     line-height: 1.25;    
     margin: 0;
     padding: 0;
-    width: 90%;
+    width: 87%;
 
     &--center {
         margin: 0 auto;
@@ -13,5 +13,9 @@
 
     &--white {
         color: #fff;
+    }
+
+    &--padding-left {
+        padding-left: 2rem;
     }
 }
