--- a/app/assets/styles/layout/_nav.scss
+++ b/app/assets/styles/layout/_nav.scss
@@ -2,6 +2,7 @@
   background-color: rgba($black, .8);
   height: 100vh;
   width: 100%;
+  margin-top: -50px;
   position: absolute;
   right: 50px;
   top: 0;
@@ -12,6 +13,7 @@
     right: 0;
     background-color: rgba($black, .85);
     margin: 0;
+    margin-top: 50px;
     padding: 0;
     width: 120px;
 
