--- a/app/assets/styles/layout/_section-title.scss
+++ b/app/assets/styles/layout/_section-title.scss
@@ -1,7 +1,8 @@
 .section-title {
     color: $yellow;
     font-size: 50px;
-    margin-top: 0;
+    letter-spacing: 3.7px;
+    margin: 1rem 1rem 2.5rem;
     text-transform: uppercase;
 
     &--normal {
