--- a/app/assets/styles/layout/_site-footer.scss
+++ b/app/assets/styles/layout/_site-footer.scss
@@ -1,7 +1,15 @@
 .site-footer {
   background-color: $black;
   text-align: center;
-  padding: 8rem 0;
+  padding: 5.5rem 0;
+
+  p {
+    font-size: 25px;
+    letter-spacing: 2px;
+    line-height: 3.842;
+    position: relative;
+    left: 20px;
+  }
 
   a {
     color: $yellow;
@@ -13,7 +21,9 @@
   }
 
   .social-icons {
-    margin-top: 3rem;
+    margin-top: .3rem;
+    position: relative;
+    left: 10px;
 
     img {
       margin: 1rem;
