--- a/app/assets/styles/layout/_site-header.scss
+++ b/app/assets/styles/layout/_site-header.scss
@@ -5,7 +5,13 @@
     padding: 0 0 4rem;
 
     @include atSmall {
-        padding: 2.7rem 0 12rem;        
+        padding: 3.7rem 0 14rem;        
+    }
+
+    img {
+        position: relative;
+        right: -11px;
+        top: -16px;
     }
 
     &__nav {
@@ -14,10 +20,6 @@
 
      .menu-icon {
         background-color: $yellow;
-        color: $black;
-        font-size: 1.5em;
-        line-height: 50px;
-        text-align: center;
         width: 50px;
         height: 50px;
         position: absolute;
@@ -27,6 +29,15 @@
         &:hover {
             cursor: pointer;
         }
+
+        img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        
     }
 
     .hidden {
@@ -37,24 +48,30 @@
         color: $yellow;
         font-size: 100px;
         font-weight: 100;
+        letter-spacing: 13px;
         line-height: 1.023;
         margin: 4rem 0 0;
+        padding-left: .1rem;
         text-transform: uppercase;
 
         @include atSmall {
             font-size: 176px;
-            margin: 8rem 0 0;
+            margin: 10.7rem .5rem 0;
         }
     }
 
     &__blurb {
         font-size: 15px;
-        line-height: 1.667;        
-        padding: 0 0 1rem;
+        letter-spacing: 1.059px;
+        line-height: 1.667;
+        hyphens: auto;
+        margin-top: .7rem;      
+        padding: 0 .5rem 1.6rem;
         width: 70%;
+        word-break: break-all;
 
         @include atSmall {
-            width: 55%;
+            width: 63%;
         }
     }
 }
