--- a/app/assets/styles/sections/_contact-info.scss
+++ b/app/assets/styles/sections/_contact-info.scss
@@ -1,18 +1,19 @@
 .contact-info {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     width: 220px;
 
-    @include atSmall {
+    @include atLarge {
       width: 100%;
+      flex-wrap: nowrap;
     }
 
     &__item {
-      flex: 0 0 220px;
+      flex: 0 0 270px;
       display: flex;
       align-items: center;
-      margin: .5rem;
+      margin: 1.7rem 3.4rem;
+      margin-right: 4.6rem;
     }
 
     &__icon {
@@ -20,12 +21,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 85px;
+      width: 80px;
       height: 85px;
     }
 
     &__details {
-      padding-left: 1rem;
+      font-size: 20px;
+      letter-spacing: 1px;
+      padding-left: 1.6rem;
 
       p {
         margin: 0;
