--- a/app/assets/styles/sections/_contact.scss
+++ b/app/assets/styles/sections/_contact.scss
@@ -1,10 +1,12 @@
 .contact {
+  padding-bottom: 5rem;
+
   &__section {
     margin-top: 4rem;
     text-align: center;
 
     @include atMedium {
-      margin-top: 7.5rem;
+      margin-top: 6rem;
     }
 
     .form {
@@ -12,9 +14,14 @@
       margin: 0 auto;
       width: 300px;
       position: relative;
+      left: 10px;
 
       @include atMedium {
         width: 630px;
+      }
+
+      @include atLarge {
+        width: 1000px;
       }
 
       &__section {
@@ -36,6 +43,10 @@
       .input--short {
         box-sizing: border-box;
         width: 300px;
+
+        @include atLarge {
+          width: 470px;
+        }
       }
 
       .input--long {
@@ -44,6 +55,10 @@
 
         @include atMedium {
           width: 630px;
+        }
+
+        @include atLarge {
+          width: 970px;
         }
       }
       
@@ -56,10 +71,11 @@
       }
 
       .label {
+        font-size: 20px;
         font-weight: bold;
         letter-spacing: .05em;
         position: absolute;
-        padding: 2.1rem 1rem;
+        padding: 1.9rem 1.6rem;
 
         &-focus {
           font-size: 14px;
@@ -68,9 +84,16 @@
       }
 
       .button--submit {
-        margin-top: 1rem;
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 2.5rem;
         margin-bottom: 1rem;
-        padding: 1rem 8rem;
+        padding: 1.8rem 6rem;
+
+        @include atMedium {
+          line-height: 1.2;                  
+          padding: 1.4rem 10.2rem 2.8rem;          
+        }
       }
     }
   }
