--- a/app/assets/styles/sections/_portfolio-works.scss
+++ b/app/assets/styles/sections/_portfolio-works.scss
@@ -11,7 +11,7 @@
       width: 100%;
 
       @include atMedium {
-        width: 25%;
+        width: 26.3%;
       }
     }
 
@@ -22,7 +22,7 @@
       flex-wrap: wrap;
 
       @include atMedium {
-        width: 75%;
+        width: 73.7%;
       }
     }
 
@@ -35,7 +35,7 @@
       @include atMedium {
         flex: 0 0 33.33%;
         max-width: 33.33%;
-        height: 300px;
+        height: 450px;
       }
 
       &--is-visible {
@@ -49,64 +49,42 @@
       max-width: 100%;
 
       @include atMedium {
-        flex: 0 0 50%;
-        max-width: 50%;
+        flex: 0 0 50.7%;
+        max-width: 50.7%;
         height: 450px;
       }
+    }
+
+    .description {
+      letter-spacing: 1.4px;
+      position: relative;
+      left: -4px;
+      width: 97%;
+      padding-bottom: 1.9rem;
     }
 
     &__header {
       background-color: $yellow;
       box-sizing: border-box;
+      letter-spacing: 2.6px;
       width: 100%;
       height: 450px;
       padding: 4rem 2rem;
 
         @include atMedium {
-          left: 25%;
-          top: auto;
           height: 450px;
-          width: 50%;
+          width: 49.3%;
         }
 
         @include atLarge {
-          padding: 7rem 4.5rem;      
+          padding: 6.8rem 4.8rem;      
         }
 
         .title {
           font-size: 30px;
           margin: 0;
-          margin-bottom: 3rem;
+          margin-bottom: 2.3rem;
         }
-    }
-  }
-
-  .work-header {
-    background-color: $yellow;
-    padding: 4rem 2rem;
-
-    @include atLarge {
-      padding: 7rem 4.5rem;      
-    }
-
-    &__title {
-      font-size: 30px;
-      margin: 0;
-      margin-bottom: 3rem;
-    }
-  }
-
-  .work {
-    &--dark-brown {
-      background-color: $dark-brown;
-    }
-
-    &--light-brown {
-      background-color: $light-brown;
-    }
-
-    &-button {
-      margin-top: 2.5rem; 
     }
   }
 }
