--- a/app/assets/styles/sections/_stats.scss
+++ b/app/assets/styles/sections/_stats.scss
@@ -1,12 +1,15 @@
 .stats {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  justify-content: space-around;
   margin: 0 auto;
+  margin-bottom: -1.5rem;  
   width: 300px;
+  padding-top: .4rem;
+  padding-bottom: 0;
 
   @include atSmall {
-    width: 500px;
+    width: 650px;
   }
 
   @include atMedium {
@@ -15,30 +18,18 @@
 
   .stat {
     text-align: center;
+    margin: 1rem;
+   
+    @include atLarge {
+      margin: 0 2.7rem;
+      margin-right: 4.7rem;
+    }
 
-    &:first-of-type {
+    &:first-of-type, &:nth-of-type(2) {
       margin-bottom: 3rem;
-      margin-right: 3rem;
 
       @include atMedium {
         margin-bottom: 0;
-        margin-right: 0;
-      }
-    }
-
-    &:nth-of-type(2) {
-      margin-bottom: 3rem;      
-      
-      @include atMedium {
-        margin-bottom: 0;
-      }
-    }
-
-    &:nth-of-type(3) {
-      margin-right: 3rem;      
-      
-      @include atMedium {
-        margin-right: 0;
       }
     }
 
@@ -49,13 +40,14 @@
 
       @include atSmall {
         font-size: 60px;
-        margin: 1rem;
+        margin: 2.5rem;
       }
     }
 
     &__description {
       color: $yellow;
       font-size: 16px;
+      letter-spacing: 1.5px;
       text-transform: uppercase;
 
       @include atSmall {
