--- a/app/assets/styles/layout/_generic-content.scss
+++ b/app/assets/styles/layout/_generic-content.scss
@@ -1,6 +1,6 @@
 .generic-content {
-    font-size: 20px;
-    letter-spacing: 1.4px;
+    font-size: 1.250em;
+    letter-spacing: 0.087em;
     line-height: 1.25;    
     margin: 0;
     padding: 0;
