--- a/app/assets/styles/layout/_nav.scss
+++ b/app/assets/styles/layout/_nav.scss
@@ -18,7 +18,7 @@
     width: 120px;
 
     li {
-      font-size: 20px;
+      font-size: 1.250em;
       list-style: none;      
       padding: 2rem;
       text-align: center;
