--- a/app/assets/styles/sections/_contact-info.scss
+++ b/app/assets/styles/sections/_contact-info.scss
@@ -30,8 +30,8 @@
     }
 
     &__details {
-      font-size: 20px;
-      letter-spacing: 1px;
+      font-size: 1.250em;
+      letter-spacing: 0.063em;
       padding-left: 1.6rem;
 
       p {
