--- a/app/assets/styles/layout/_section-title.scss
+++ b/app/assets/styles/layout/_section-title.scss
@@ -1,7 +1,7 @@
 .section-title {
     color: $yellow;
-    font-size: 50px;
-    letter-spacing: 3.7px;
+    font-size: 3.125em;
+    letter-spacing: 0.231em;
     margin: 1rem 1rem 2.5rem;
     text-transform: uppercase;
 
