--- a/app/assets/styles/sections/_contact.scss
+++ b/app/assets/styles/sections/_contact.scss
@@ -71,20 +71,20 @@
       }
 
       .label {
-        font-size: 20px;
+        font-size: 1.250em;
         font-weight: bold;
-        letter-spacing: .05em;
+        letter-spacing: 0.063em;
         position: absolute;
         padding: 1.9rem 1.6rem;
 
         &-focus {
-          font-size: 14px;
+          font-size: 0.875em;
           padding: 1.3rem 1rem;
         }
       }
 
       .button--submit {
-        font-size: 20px;
+        font-size: 1.250em;
         font-weight: bold;
         margin-top: 2.5rem;
         margin-bottom: 1rem;
