--- a/app/assets/styles/sections/_portfolio-works.scss
+++ b/app/assets/styles/sections/_portfolio-works.scss
@@ -56,7 +56,7 @@
     }
 
     .description {
-      letter-spacing: 1.4px;
+      letter-spacing: 0.087em;
       position: relative;
       left: -4px;
       width: 97%;
@@ -66,7 +66,7 @@
     &__header {
       background-color: $yellow;
       box-sizing: border-box;
-      letter-spacing: 2.6px;
+      letter-spacing: 0.163em;
       width: 100%;
       height: 450px;
       padding: 4rem 2rem;
@@ -81,7 +81,7 @@
         }
 
         .title {
-          font-size: 30px;
+          font-size: 1.875em;
           margin: 0;
           margin-bottom: 2.3rem;
         }
